Creating the route and files for copy

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -12,6 +12,7 @@
     <td><%=h entry.description %></td>
 		<td></td>
     <td><%= link_to 'Edit', edit_entry_path(entry) %></td>
+		<td><%= link_to 'Copy', copy_entry_path(entry) %></td>
     <td><%= link_to 'Destroy', entry, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
   <% for transaction in entry.transactions %>
