Added the migration and updated the display data

--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -9,6 +9,11 @@
 				<%= f.text_field :date %>
 			</td>
 			<td>
+				<br/>
+				<%= f.label :corp, "*", :value => "c" %> <%= f.radio_button :corp, "c" %>
+				<%= f.label :corp, "!", :value => "p" %> <%= f.radio_button :corp, "p" %>
+			</td>
+			<td>
 				<%= f.label :description %><br/>
 				<%= f.text_field :description %>
 		</tr>
