--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -3,21 +3,23 @@
 <table>
   <tr>
     <th>Date</th>
+		<td></td>
     <th>Description</th>
   </tr>
 
 <% @entries.each do |entry| %>
   <tr>
-    <td><%=h entry.date %></td>
-    <td><%=h entry.description %></td>
-	<td></td>
+    <td><%= h entry.date %></td>
+		<td><%= h "*" if entry.corp == "c" %><%= h "!" if entry.corp == "p" %></td>
+    <td><%= h entry.description %></td>
+		<td></td>
     <td><%= link_to 'Edit', edit_entry_path(entry) %></td>
 	<td><%= link_to 'Copy', copy_entry_path(entry) %></td>
     <td><%= link_to 'Destroy', entry, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
   <% for transaction in entry.transactions %>
 	<tr>
-		<td></td>
+		<td colspan="2"></td>
 		<td><%= h transaction.account %></td>
 		<td><%= h transaction.amount %></td>
 	</tr>
